--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -26,7 +26,7 @@ main {
         width: 100dvw; height: 100dvh;
         padding-top: var(--scroll-padding); scroll-padding-top: var(--scroll-padding);
         scroll-snap-type: y mandatory;
-        overflow: auto;
+        overflow: hidden auto;
        
         & > * {
             min-height: calc(100dvh - var(--scroll-padding));
