--- a/src/css/shared.scss
+++ b/src/css/shared.scss
@@ -1,4 +1,5 @@
 @use 'theme';
+@use 'sass:color';
 
 
 .bd {
@@ -18,6 +19,6 @@
     box-shadow: 0px 0px 1em .125em theme.$base-color;
 
     &:hover {
-        background: lighten($color: theme.$base-color, $amount: 4);
+        background: color.adjust($color: theme.$base-color, $lightness: 15%);
     }
 }
