--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     background-color: theme.$bg; color: theme.$fg;
-    font-family: Ubuntu  sans;
+    font-family: Ubuntu, sans;
 }
 
 main {
