--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -11,9 +11,7 @@
         display: flex;
         gap: 2em;
 
-        & > * {
-            width: 1.5em; height: 1.5em;
-        }
+        & > * { font-size: 1.5em; height: 1em; }
     }
 }
 
