--- a/src/pages/faq/Faq.module.scss
+++ b/src/pages/faq/Faq.module.scss
@@ -9,8 +9,14 @@
         flex-direction: column; align-items: center; gap: 1em;
 
         & > h2 {
-            padding: 0 1em;
+            padding: .25em 1em 1em;
             text-align: center;
         }
     }
+}
+
+.questions {
+    display: flex;
+    width: 100%;
+    flex-direction: column; gap: 1.25em;
 }
