--- a/src/pages/timeline/Timeline.module.scss
+++ b/src/pages/timeline/Timeline.module.scss
@@ -1,13 +1,69 @@
+@use '../../css/theme.scss';
+@use 'sass:color';
+
+
 .timeline {
     display: flex;
-    padding: 2em;
-    justify-content: center; gap: 1em;
+    margin: 0 auto; padding: 2em; max-width: 1280px;
+    justify-content: center; align-content: space-between; gap: 3em;
+}
+
+.header {
+    margin: 0 1em 1em;
+    color: color.adjust(theme.$base-color, $lightness: 20%);
+    text-align: center; 
+    text-shadow: 0 0 .25em color.adjust(theme.$base-color, $lightness: 20%);
+}
+
+.list {
+    width: fit-content;
+}
+
+.list-symbol {
+    display: flex;
+    padding: 0 0 1em;
+    flex-direction: column;
+    align-items: center; gap: 1em;
+
+    &::before {
+        content: ''; display: block;
+        width: 1em; height: 1em;
+        background: radial-gradient(circle, theme.$base-color 0%, theme.$fg 200%);
+        border-radius: 1.5em;
+        justify-self: center;
+        box-shadow: 0 0 0 .1em rgba(theme.$base-color, .5),
+          0 0 .05em .2em rgba(theme.$base-color, .125);
+    }
+
+    &::after {
+        content: ''; display: block;
+        width: .125em; flex-grow: 1;
+        background: theme.$bg2;
+    }
+}
+
+.list-item {
+    h4 {
+        margin: 0 0 .5em;
+        font-size: 2em; font-weight: bold;
+    }
+    
+    p {
+        margin: 0 0 2em;
+        opacity: .8;
+    }
+}
+
+.list {
+    display: grid;
+    height: fit-content;
+    grid-template-columns: max-content auto;
 }
 
 
 @media (max-width: 960px) {
     .timeline {
         flex-direction: column;
-        justify-content: unset;
+        justify-content: unset; align-items: center; gap: 1em;
     }
 }
