--- a/src/pages/details/Details.module.scss
+++ b/src/pages/details/Details.module.scss
@@ -19,11 +19,12 @@
 
     & h2 {
         margin-bottom: .75em;
+        width: 13em;
     }
 
     & div { 
-        font-size: 1.125em;
-        line-height: 1.25;
+        font-size: 1.25em;
+        line-height: 1.5;
         opacity: .75; 
     }
 }
