--- a/src/pages/format/Format.module.scss
+++ b/src/pages/format/Format.module.scss
@@ -13,12 +13,13 @@
 
         h3 {
           margin: 0;
-          font-size: 2em; font-weight: bold;
+          font-size: 2.25em; font-weight: bold;
         }
 
         div {
           margin: 1em 0 0;
           opacity: .75;
+          font-size: 1.125em;
         }
     }
 }
