sponsor logos added.

--- a/src/pages/homepage/Homepage.module.scss
+++ b/src/pages/homepage/Homepage.module.scss
@@ -35,7 +35,7 @@
 
     & > div {
         display: flex; 
-        padding: 2em 3em 4em; max-width: min(calc(100vw - 4em), 50em);
+        padding: 2em 3em 4em; 
         justify-content: center;
         flex-wrap: wrap; gap: 2em;
 
