awards(responsive): 720-1000px

--- a/src/pages/awards/Awards.module.scss
+++ b/src/pages/awards/Awards.module.scss
@@ -3,7 +3,7 @@
 
 .awards {
     display: flex;
-    padding: 2em;
+    padding: 2em; min-height: unset;
     flex-direction: column; gap: 2em;
 
     h2 {
