--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,46 +1,53 @@
 @use 'theme';
 
-* { 
+* {
     box-sizing: border-box;
     font: inherit;
 }
 
 :root {
     --scroll-padding: 0;
+    font-size: 16px;
 }
 
 body {
     margin: 0;
-    background-color: theme.$bg; color: theme.$fg;
+    background-color: theme.$bg;
+    color: theme.$fg;
     font-family: Inter Tight, sans;
 }
 
 main {
-    & > header {
+    &>header {
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
     }
 
-    & > div {
-        width: 100dvw; height: 100dvh;
-        padding-top: var(--scroll-padding); scroll-padding-top: var(--scroll-padding);
+    &>div {
+        max-width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: var(--scroll-padding);
+        scroll-padding-top: var(--scroll-padding);
         scroll-snap-type: y proximity;
         overflow: hidden auto;
-       
-        & > * {
+
+        &>* {
             min-height: calc(100dvh - var(--scroll-padding));
             scroll-snap-align: start;
         }
     }
-    
 }
 
-::-webkit-scrollbar { 
+::-webkit-scrollbar {
     width: 1em
 }
-::-webkit-scrollbar-thumb { 
-    background-color: theme.$bg2; 
-    border-radius: .125em; border: .25em solid transparent; 
-    background-clip: padding-box 
+
+::-webkit-scrollbar-thumb {
+    background-color: theme.$bg2;
+    border-radius: .125em;
+    border: .25em solid transparent;
+    background-clip: padding-box
 }
