--- a/src/pages/details/Details.module.scss
+++ b/src/pages/details/Details.module.scss
@@ -3,46 +3,57 @@
 
 .details {
     display: flex;
-    margin: auto; padding: 2em; max-width: 80em;
+    align-items: center;
+    width: 95%;
+    margin: 0;
+    padding: 2em;
+    width: 80%;
     position: relative;
     background-image: radial-gradient(circle at top, theme.$bg2, transparent 50%);
-    gap: 4em; align-items: center;
 }
 
 .img {
-    width: 48em;
+    width: 35%;
+    height: 35rem;
+
+    &>img {
+        height: 100%;
+    }
 }
 
 .texts {
     display: flex;
-    flex-direction: column; justify-content: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 65%;
 
     & h2 {
         margin-bottom: .75em;
         width: 13em;
     }
 
-    & div { 
+    & div {
         font-size: 1.25em;
         line-height: 1.5;
-        opacity: .75; 
+        opacity: .75;
     }
 }
 
 .background-tiles {
-    width: 80%; height: 60%;
-    position: absolute; top: 0; left: 0;
+    width: 80%;
+    height: 60%;
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: -1;
 
     background-image: linear-gradient(-90deg, theme.$bg, transparent 16em),
         linear-gradient(0deg, theme.$bg, transparent 16em),
-        repeating-linear-gradient(
-            theme.$bg2,
+        repeating-linear-gradient(theme.$bg2,
             theme.$bg2 .05em,
             transparent .05em,
             transparent 3em,
-        ), repeating-linear-gradient(
-            90deg,
+        ), repeating-linear-gradient(90deg,
             theme.$bg2,
             theme.$bg2 .05em,
             transparent .05em,
@@ -52,5 +63,7 @@
 
 
 @media (max-width: 800px) {
-    .img { display: none }
+    .img {
+        display: none
+    }
 }
