--- a/src/pages/format/Format.module.scss
+++ b/src/pages/format/Format.module.scss
@@ -21,5 +21,12 @@
           opacity: .75;
           font-size: 1.125em;
         }
+
+        ul {
+          margin: 1em 0 0;
+          opacity: .75;
+          font-size: 1.125em;
+          margin:0; padding: 0 0 0 1em;
+        }
     }
 }
