timeline: centered timeline / awards: minor padding adjustments / details: background gradient for wide screens

--- a/src/pages/awards/Awards.module.scss
+++ b/src/pages/awards/Awards.module.scss
@@ -64,7 +64,7 @@
 @media (max-width: 720px) {
     .award-list {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr; gap: .75em;
     }
 
     .award {
