--- a/src/pages/faq/Question.module.scss
+++ b/src/pages/faq/Question.module.scss
@@ -34,6 +34,11 @@
     overflow: hidden;
     interpolate-size: allow-keywords;
     font-size: 1.125em;
+    
+    a {
+        color: theme.$fg;
+        font-weight: bold;
+    }
 }
 
 .question:not([a-enabled]) {
