--- a/src/pages/faq/Faq.module.scss
+++ b/src/pages/faq/Faq.module.scss
@@ -11,7 +11,7 @@
         flex-direction: column; align-items: center; gap: 1em;
 
         & > h2 {
-            padding: .25em 1em 1em;
+            padding: .25em 1em .5em;
             text-align: center;
         }
     }
