minor: Awards.module.scss:23 add % to preserve current behavior

--- a/src/pages/awards/Awards.module.scss
+++ b/src/pages/awards/Awards.module.scss
@@ -20,7 +20,7 @@
 
 .award {
     display: flex;
-    color: color.adjust(theme.$base-color, $lightness: 16);
+    color: color.adjust(theme.$base-color, $lightness: 16%);
     flex-direction: column; align-items: center; gap: 2em;
 
     & > div {
