--- a/src/pages/details/Details.module.scss
+++ b/src/pages/details/Details.module.scss
@@ -7,12 +7,11 @@
     position: relative;
     background-image: radial-gradient(ellipse at top, theme.$bg2, transparent 50%);
     background-size: 100% 50%; background-repeat: no-repeat;
-    gap: 1em; align-items: center;
+    align-items: center; gap: 1em;
 }
 
 .img {
-    margin-right: -2em;
-    width: 24em; height: 30em;
+    width: 24em; height: 24em;
     object-fit: cover;
 }
 
