--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,13 +1,16 @@
-.footer {
+@use '../../css/theme.scss';
+
+
+footer {
     display: flex;
-    padding: 3em;
+    padding: 3em 3em 0;
     flex-direction: column; align-items: center; gap: 2em;
 
     & > img {
         width: 20em;
     }
 
-    & > div {
+    & .links {
         display: flex;
         gap: 2em;
 
@@ -20,6 +23,26 @@
             & > svg {
                 cursor: pointer;
                 width: 1em; height: 1em;
+            }
+        }
+    }
+
+    & .footer {
+        display: flex;
+        padding: 1em .5em 2em;
+        width: 100%; max-width: 80em;
+        border-top: .25em solid theme.$bg2;
+        justify-content: space-between; gap: 2em;
+
+        & * { opacity: .75; }
+
+        & div {
+            display: flex;
+            gap: 1em;
+
+            a {
+                color: theme.$fg;
+                font-weight: bold;
             }
         }
     }
