--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -43,6 +43,7 @@ footer {
             a {
                 color: theme.$fg;
                 font-weight: bold;
+                text-align: center;
             }
         }
     }
@@ -53,4 +54,8 @@ footer {
     .footer {
         & > img { font-size: .8em; }
     }
+}
+
+@media (max-width: 540px) {
+    .source { display: none; }
 }
