--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -35,13 +35,13 @@ header {
 }
 
 
-@media (max-width: 1080px) {
+@media (max-width: 67.5rem) {
     .wide-screen-button {
         display: none;
     }
 }
 
-@media (max-width: 960px) {
+@media (max-width: 60rem) {
     header {
         display: flex;
         margin: 0; width: 100%;
@@ -50,11 +50,11 @@ header {
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 50rem) {
     .buttons { display: none }
 }
 
-@media (max-width: 384px) {
+@media (max-width: 24rem) {
     header {
         font-size: .8em;
     }
