--- a/src/pages/homepage/Homepage.module.scss
+++ b/src/pages/homepage/Homepage.module.scss
@@ -94,11 +94,11 @@
 }
 
 
-@media (max-width: 750px) {
+@media (max-width: 45rem) {
     .glare2 { display: none; }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 37.5rem) {
     .sponsors > div { 
         padding-left: 0; padding-right: 0;
     }
