--- a/src/pages/awards/Awards.module.scss
+++ b/src/pages/awards/Awards.module.scss
@@ -86,3 +86,17 @@
         .p5 { order: 6 }
     }
 }
+
+@media (max-width: 22.5rem) {
+    .award {
+        font-size: .8em;
+    }
+}
+
+@media (max-width: 18rem) {
+    .award-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
