--- a/src/pages/homepage/Homepage.module.scss
+++ b/src/pages/homepage/Homepage.module.scss
@@ -7,6 +7,7 @@
 }
 
 .center {
+    padding: .125em;
     display: flex;
     flex-direction: column; gap: 1.5em;
     align-items: center;
@@ -16,7 +17,7 @@
     }
 
     & > span {
-        font-size: 1.25em;
+        text-align: center; font-size: 1.25em;
         opacity: .75;
     }
 
